2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:
	* src/PlaylistWindow.cs:

	Get rid of messy volume menu.

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* configure.in:
	* libmuine/Makefile.am:

	Better check for libid3tag.

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/SkipToWindow.glade:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/SkipToWindow.cs:
	* src/StringUtils.cs:

	Nicer seeking window. 

	Based on a patch by Viet Yen Nguyen <nguyen@cs.utwente.nl>
	
	* libmuine/db.c: (db_foreach):

	Fix gcc 2.96 bug.

2004-01-21  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added cs (Czech) to ALL_LINGUAS.

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/ErrorDialog.glade:
	* data/glade/Makefile.am:
	* data/glade/PlaylistWindow.glade:
	* data/glade/YesNoDialog.glade:
	* data/muine.schemas.in:
	* src/ErrorDialog.cs:
	* src/FileSelector.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/YesNoDialog.cs:

	Playlist open/save.

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:

	Menu rearrangement.

	Patch by Viet Yen Nguyen <nguyen@cs.utwente.nl>

2004-01-21  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/AddWindow.glade:

	Change the button order of the add window to be HIG compliant.
	
	* src/PlaylistWindow.cs:

	Change the tooltip on the previous button.

	Patch by Viet Yen Nguyen <nguyen@cs.utwente.nl>

2004-01-20  Jorn Baayen  <jorn@nl.linux.org>

	* NEWS:
	* TODO:
	* configure.in:
	* src/About.cs:

	Release 0.1.1.

2004-01-19  Jorn Baayen  <jorn@nl.linux.org>

	* src/AddAlbumWindow.cs:

	Slight look tweak.

2004-01-19  Jorn Baayen  <jorn@nl.linux.org>

	* libmuine/player.c: (player_tell):
	* src/PlaylistWindow.cs:

	More eos bugs.

2004-01-19  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/ProgressWindow.glade:

	Remove "FILENAME" tmp string. It was shown at times.
	
	* src/PlaylistWindow.cs:

	Fix a last_eos bug.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>
